Form now rendering values based on first selection, solved layout problems

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,7 +46,7 @@
 }
 
 hr {
-  width: 400px;
+  width: 60%;
   border-top: 1px solid #f8f8f8;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
